crates/deps/sys/src/Windows/Win32/Security/DiagnosticDataQuery/mod.rs

#![allow(non_snake_case, non_camel_case_types)]
#[link(name = "windows")]
extern "system" {
    fn DdqCancelDiagnosticRecordOperation();
    fn DdqCloseSession();
    fn DdqCreateSession();
    fn DdqExtractDiagnosticReport();
    fn DdqFreeDiagnosticRecordLocaleTags();
    fn DdqFreeDiagnosticRecordPage();
    fn DdqFreeDiagnosticRecordProducerCategories();
    fn DdqFreeDiagnosticRecordProducers();
    fn DdqFreeDiagnosticReport();
    fn DdqGetDiagnosticDataAccessLevelAllowed();
    fn DdqGetDiagnosticRecordAtIndex();
    fn DdqGetDiagnosticRecordBinaryDistribution();
    fn DdqGetDiagnosticRecordCategoryAtIndex();
    fn DdqGetDiagnosticRecordCategoryCount();
    fn DdqGetDiagnosticRecordCount();
    fn DdqGetDiagnosticRecordLocaleTagAtIndex();
    fn DdqGetDiagnosticRecordLocaleTagCount();
    fn DdqGetDiagnosticRecordLocaleTags();
    fn DdqGetDiagnosticRecordPage();
    fn DdqGetDiagnosticRecordPayload();
    fn DdqGetDiagnosticRecordProducerAtIndex();
    fn DdqGetDiagnosticRecordProducerCategories();
    fn DdqGetDiagnosticRecordProducerCount();
    fn DdqGetDiagnosticRecordProducers();
    fn DdqGetDiagnosticRecordStats();
    fn DdqGetDiagnosticRecordSummary();
    fn DdqGetDiagnosticRecordTagDistribution();
    fn DdqGetDiagnosticReport();
    fn DdqGetDiagnosticReportAtIndex();
    fn DdqGetDiagnosticReportCount();
    fn DdqGetDiagnosticReportStoreReportCount();
    fn DdqGetSessionAccessLevel();
    fn DdqGetTranscriptConfiguration();
    fn DdqIsDiagnosticRecordSampledIn();
    fn DdqSetTranscriptConfiguration();
}
